# Genetic_evolution

./: .gitignore  CMakeLists.txt  Makefile  README.md  compile.sh  compile2.sh  findfunc.ez  gravitationuniv.cpp  gravitationuniv.ez  gravitationuniv.mak  gravitationuniv.plot  gravitationuniv.prm  gravitationunivIndividual.cpp  gravitationunivIndividual.hpp  onemax.ez  regression.ez  regressionInitial.ez  sigdecomp.ez
